# dharma_swarm

./: .env.example  .env.template  .gitignore  AGENT_IDENTITY_UNIFICATION.md  AGENT_SWARM_SYNTHESIS.md  ANTHROPIC_GRANT_DRAFT.md  CLAUDE.md  CLAUDE_CODE_LIVE_FIRE_PROMPT.md  CONSTITUTIONAL_HARDENING_SPRINT_REPORT.md  CONSTITUTIONAL_XRAY_REPORT.md  CRITIC.md  CYBERNETIC_LOOP_MAP.md  DUAL_SPRINT_COMPLETION_REPORT.md  Dockerfile  Dockerfile.swarm  FOUNDATIONS_TO_CODE_MAP.md  FULL_REPO_AUDIT_2026-03-28.md  GENOME_WIRING.md  GNANI_LODESTONE.md  GODEL_CLAW_V1_REPORT.md  INTEGRATION_MAP.md  INTERFACE_MISMATCH_MAP.md  LIVING_LAYERS.md  MASTER_BUILD_SPEC.md  MEGA_PROMPT_STRANGE_LOOP.md  MEGA_PROMPT_v2.md  MEGA_PROMPT_v3.md  MEGA_PROMPT_v4.md  MODEL_ROUTING_CANON.md  MODEL_ROUTING_MAP.md  MOONSHOT_COMPLETE.md  Makefile  NAVIGATION.md  NEXT_SPRINT_PROMPT.md  ORTHOGONAL_UPGRADE_PROMPT.md  PALANTIR_ONTOLOGY_GAP_ANALYSIS.md  PALANTIR_UPGRADE_PROMPT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_REPORT.md  (+44 more)
.dharma_psmv_hyperfile_branch/: thinkodynamic_director_heartbeat.json
.dharma_psmv_hyperfile_branch_v2/: thinkodynamic_director_heartbeat.json
analysis/: categorical_analysis.py
api/: __init__.py  chat_tools.py  main.py  models.py  module_truth.py  ws.py
architecture/: BLUEPRINTS.md  CYBERNETIC_TRANSCENDENCE_PROTOCOL.md  PRINCIPLES.md
benchmarks/: README.md  gauntlet.py  long_context_sidecar_suite.py
dashboard/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
desktop-shell/: README.md  package-lock.json  package.json
desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop-shell/src-tauri/capabilities/: default.json
desktop-shell/src-tauri/src/: main.rs
dharma_swarm/: __init__.py  action_dispatch.py  active_inference.py  adaptive_autonomy.py  agent_constitution.py  agent_export.py  agent_install.py  agent_memory.py  agent_memory_manager.py  agent_registry.py  agent_runner.py  agent_runner_quality.py  ai_reciprocity_ledger.py  algedonic.py  algedonic_activation.py  amiros.py  anekanta_gate.py  api.py  api_key_audit.py  api_keys.py  archaeology_ingestion.py  archive.py  artifact_manifest.py  artifact_store.py  auditor.py  auto_proposer.py  autonomous_agent.py  autoresearch_eval.py  autoresearch_loop.py  base_provider.py  benchmark_registry.py  bootstrap.py  bridge.py  bridge_coordinator.py  bridge_registry.py  browser_agent.py  build_engine.py  canary.py  canonical_replay.py  casberry_bridge.py  (+385 more)
docs/: ABSTRACTION_LAYER_AUDIT_2026-03-18.md  ALLOUT_6H_MODE.md  ALL_NIGHT_BUILD_CONCLAVE_2026-03-20.md  ASCII_STUDIO_SETUP.md  CODEX_ALLNIGHT_YOLO.md  COMPLIANCE_CERTIFICATION_RESEARCH.md  COMPLIANCE_MAPPING.md  CONSCIOUSNESS_ARCHAEOLOGY_SCAN.md  CURRENT_META_TOPOLOGY_2026-04-02.md  DARWIN_ENGINE_META_LEARNING_PROTOTYPE.md  DARWIN_ENGINE_P0_IMPLEMENTATION_SPEC.md  DARWIN_ENGINE_PERPETUAL_EVOLUTION_RESEARCH.md  DARWIN_ENGINE_QUICK_START_GUIDE.md  DARWIN_ENGINE_RESEARCH_EXECUTIVE_SUMMARY.md  DGC_100X_LEAN_ESSENCE_2026-03-08.md  DGC_KEEP_CUT_ADD_MATRIX_2026-03-08.md  DGC_STRESS_HARNESS.md  DGC_SUBAGENT_GAUNTLET_PROMPT.md  DHARMA_SWARM_1000X_MASTERPLAN_2026-03-16.md  DHARMA_SWARM_THREE_PLANE_ARCHITECTURE_2026-03-16.md  DHARMIC_SINGULARITY_PROMPT_v2.md  EVOLUTION_PROPOSAL_FLICKER_LOG_INTEGRATION.md  FORMAL_VERIFICATION_PRODUCTION_RESEARCH.md  GENERATED_ARTIFACT_BOUNDARY_MATRIX_2026-04-02.md  GINKO_ENHANCEMENT_WAVE.md  GOTCHA_PROTOCOL.md  JIKOKU_SAMAYA_EXECUTIVE_SUMMARY.md  JIKOKU_SAMAYA_SYSTEM_DIAGRAM.md  KAIZEN_EFFICIENCY_ANALYSIS.md  KAIZEN_IMPLEMENTATION_SUMMARY.md  LOOP_PROTOCOL.md  MASTER_RESEARCH_PROMPT_DHARMIC_SINGULARITY.md  NVIDIA_INFRA_SELF_HEAL.md  ORCHESTRATOR_LEDGERS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROMPT_REGISTRY_SPEC.md  PROVIDER_MATRIX_HARNESS.md  README.md  RECURSIVE_READING_PROTOCOL.md  RECURSIVE_READING_SWARM_PROTOCOL.md  (+12 more)
experiments/: live_pulse_v3.py  live_pulse_v4.py
foundations/: ECONOMIC_VISION.md  EMPIRICAL_CLAIMS_REGISTRY.md  FIVE_FOURTEEN_A.md  FOUNDATIONS_SYNTHESIS.md  GLOSSARY.md  INDEX.md  META_SYNTHESIS.md  PILLAR_01_LEVIN.md  PILLAR_02_KAUFFMAN.md  PILLAR_03_JANTSCH.md  PILLAR_05_DEACON.md  PILLAR_06_FRISTON.md  PILLAR_07_HOFSTADTER.md  PILLAR_08_AUROBINDO.md  PILLAR_09_DADA_BHAGWAN.md  PILLAR_10_VARELA.md  PILLAR_11_BEER.md  PSMV_CROWN_JEWELS.md  RESIDUAL_STREAM_DIGEST.md  SACRED_GEOMETRY.md  SAMAYA_PROTOCOL.md  SYNTHESIS_DEACON_FRISTON.md  THINKODYNAMIC_BRIDGE.md
hooks/: telos_gate.py
lodestones/: CONSCIOUS_INFRASTRUCTURE.md  README.md
mode_pack/: README.md
reports/: CRYPTOGRAPHIC_AUDIT_TRAILS_RESEARCH.md  dharma_current_state_deep_dive_2026-03-19.md  (+3 more)
specs/: .gitignore  (+16 more)
spinouts/planetary_reciprocity_commons_seed/: README.md  pyproject.toml
spinouts/planetary_reciprocity_commons_seed/src/planetary_reciprocity_commons/: __init__.py  cli.py
(+1641 files in other folders)
