[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dharma-swarm"
version = "0.1.0"
description = "Darwin-Heuristic Autonomous Recursive Meta-Agent Swarm"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "John Shrader", email = "dhyana@example.com" }]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "httpx>=0.25",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0"]

[project.scripts]
dharma-swarm = "dharma_swarm.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
