[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dharma-swarm"
version = "0.1.0"
description = "Darwin-Heuristic Autonomous Recursive Meta-Agent Swarm"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "John Shrader", email = "dhyana@example.com" }]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "httpx>=0.25",
    "aiosqlite>=0.19",
    "aiofiles>=23.0",
    "scipy>=1.11",
    "textual>=0.40",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "numpy>=1.24",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0"]
router = ["fasttext-wheel>=0.9.2", "redis>=5.0.0"]
infra = [
    "langgraph>=0.2.0",
    "temporalio>=1.8.0",
    "qdrant-client>=1.11.0",
    "neo4j>=5.25.0",
]
ginko = [
    "hmmlearn>=0.3",
    "arch>=6.0",
    "yfinance>=0.2",
]

[project.scripts]
dharma-swarm = "dharma_swarm.cli:app"
dgc = "dharma_swarm.dgc_cli:main"

[tool.setuptools.packages.find]
include = ["dharma_swarm*"]
exclude = ["hooks*", "scripts*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 300
filterwarnings = [
    "ignore:'asyncio.get_event_loop_policy' is deprecated and slated for removal in Python 3.16:DeprecationWarning",
    "ignore:'asyncio.set_event_loop_policy' is deprecated and slated for removal in Python 3.16:DeprecationWarning",
    "ignore:`torch.jit.script` is not supported in Python 3.14\\+ and may break\\. Please switch to `torch.compile` or `torch.export`\\.:DeprecationWarning",
]
