[package]
name = "dharma_command_desktop_shell"
version = "0.1.0"
description = "DHARMA COMMAND repo-local desktop shell"
authors = ["Dhyana"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
