[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planetary-reciprocity-commons"
version = "0.1.0"
description = "Reciprocity infrastructure for the AI age"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dharma Swarm Incubation" }]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "typer>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
planetary-reciprocity-commons = "planetary_reciprocity_commons.cli:main"
